Atualização exibir tabela e botões modal

--- a/assets/css/material-dashboard.css
+++ b/assets/css/material-dashboard.css
@@ -17534,4 +17534,8 @@ pre[class*="language-"] {
 #statusDemanda, #idDesenvolvedor {
   background-color: #212840;
 }
+
+.modal-footer button.submit {
+  display: none;
+}
 /*# sourceMappingURL=material-dashboard.css.map */
