Atualização na criação do objeto de cadastro e atualização, cor dos botões de paginação

--- a/assets/css/material-dashboard.css
+++ b/assets/css/material-dashboard.css
@@ -17532,7 +17532,7 @@ pre[class*="language-"] {
   .ps {
     overflow: auto !important; } }
 
-#statusDemanda, #idDesenvolvedor {
+#statusDemanda, .listaDev {
   background-color: #212840; }
 
 #avaliacao, #editarDemanda, #excluirDemanda{
