--- a/assets/css/material-dashboard.css
+++ b/assets/css/material-dashboard.css
@@ -13264,7 +13264,7 @@ textarea.form-control-lg {
   .dark-version a:not(.dropdown-item):not(.choices__item):not(.leaflet-control-zoom-in):not(.leaflet-control-zoom-out):not(.btn):not(.nav-link):not(.fixed-plugin-button),
   .dark-version .table thead tr th,
   .dark-version .kanban-title-board {
-    color: #fff !important; }
+    color: rgba(255, 255, 255, 0.8) !important; }
   .dark-version .input-group.input-group-dynamic .form-control, .dark-version .input-group.input-group-static .form-control {
     background-image: linear-gradient(0deg, #e91e63 2px, rgba(156, 39, 176, 0) 0), linear-gradient(0deg, rgba(210, 210, 210, 0.6) 1px, rgba(209, 209, 209, 0) 0) !important;
     background-size: 0 100%, 100% 100%; }
